--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <footer>
+        <span>&copy;</span>
+        Slabodich
+        </a>
+    </footer>
 </body>
 </html>
