--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <footer>
+        <a href="https://github.com/Slabodich"></a>
         <span>&copy;</span>
         Slabodich
         </a>
